First jab at support for <use> elements

--- a/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants_fr.properties
+++ b/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants_fr.properties
@@ -34,6 +34,8 @@ lineY2=coordonnée y du second point
 polygonVertices=sommets
 pathD=définition du chemin
 imageHref=référence à l''image bitmap
+useX=coordonnée x de l''objet
+useY=coordonnée y de l''objet
 
 ####################################
 # Global  category property names
