Removed method SVGModel.getDocumentRoot() (replaced by equivalent SVGModel.getSvgElement()) Use of HashMap in EditManipulatorBase and cleanup of manipulator code New mode for <use> elements New geometry manipulator for <use> elements sample.svg updated to contain <use> instances

--- a/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants_fr.properties
+++ b/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants_fr.properties
@@ -36,6 +36,8 @@ pathD=définition du chemin
 imageHref=référence à l''image bitmap
 useX=coordonnée x de l''objet
 useY=coordonnée y de l''objet
+useWidth=largeur de l''objet
+useHeight=hauteur de l''objet
 
 ####################################
 # Global  category property names
